cluster/apps/dokuwiki/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dokuwiki
  labels:
    k10/injectKanisterSidecar: true
