cluster/apps/dokuwiki/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dokuwiki
  name: dokuwiki
spec:
  selector:
    matchLabels:
      app: dokuwiki
  replicas: 1
  template:
    metadata:
      labels:
        app: dokuwiki
    spec:
      containers:
      - name: dokuwiki
        image: ghcr.io/linuxserver/dokuwiki:2020-07-29-ls83
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 200Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /config
          name: dokuwiki-data
      volumes:
      - name: dokuwiki-data
        persistentVolumeClaim:
          claimName: dokuwiki-data
