cluster/apps/dokuwiki/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dokuwiki
  name: dokuwiki
  namespace: dokuwiki
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dokuwiki
  type: ClusterIP
