cluster/apps/dokuwiki/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN_TARGET}
    external-dns/is-public: true
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
  labels:
    app: dokuwiki
  name: dokuwiki
  namespace: dokuwiki
spec:
  rules:
  - host: wiki.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: dokuwiki
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - wiki.${SECRET_DOMAIN}
    secretName: wiki-eighty-three-me-tls
